# datam8-generator

./: .editorconfig  .gitignore  .gitmodules  CLAUDE.md  README.md  Update-Submodules.ps1  hatch_build_datamodel.py  pyproject.toml
.claude/: settings.local.json
.github/actions/setup-environment/: action.yml
.github/workflows/: ci-pull-request-merged-into-main.yml  ci-pull-request.yml  ci-push.yml  reusable-lint-build-test.yml  reusable-lint-build.yml
src/dm8gen/: cli.py  generate.py  migrate_to_v2.py
src/dm8gen/Factory/: AttributeTypesFactory.py  BaseEntityFactory.py  CacheManager.py  CoreEntityFactory.py  CuratedEntityFactory.py  DataModuleFactory.py  DataProductFactory.py  DataSourceFactory.py  DataSourceTypesFactory.py  DataTypesFactory.py  EntityFactory.py  Jinja2Factory.py  Model.py  ModelDataEntityFactory.py  RawEntityFactory.py  ReverseGenerator.py  StageEntityFactory.py  TypeMappingEngine.py  UnifiedEntityFactory.py  ZonesFactory.py  __init__.py
src/dm8gen/Factory/SourceDiscovery/: BaseSourceConnector.py  ConnectorRegistry.py  OracleConnector.py  SqlServerConnector.py  __init__.py
src/dm8gen/Helper/: Helper.py
src/dm8gen/generated_v2/: ModelDataEntity.py  __init__.py
template/: Union.jinja2  dataclass.jinja2
template/pydantic/: BaseModel.jinja2  dataclass.jinja2
template/pydantic_v2/: BaseModel.jinja2  ConfigDict.jinja2
tests/: README.md  conftest.py  sample_datasourcetypes.json  sample_entity.json  sample_solution.dm8s  sample_zones.json  test_010_model.py  test_010_model_cases.py  test_020_helper.py  test_020_helper_cases.py  test_050_generate.py  test_conftest.py  test_datasourcetypes_factory.py  test_factory_classes.py  test_jinja2_factory.py  test_reverse_generator.py  test_v2_schemas.py  test_zones_factory.py
