[project]
name = "datam8-generator"
version = "0.1.0"
description = "ORAYLIS DataM8 Generator"
license = "GPL-3.0"
readme = "README.md"
authors = [
    { name = "ORAYLIS Gmbh", email = "DataM8@Oraylis.de" }
]
requires-python = ">=3.11"
dependencies = [
    "autopep8==2.3.1",
    "Jinja2==3.1.5",
    "jsonschema==4.23.0",
    "pydantic==2.8.2",
    "sqlparse==0.5.1",
    "typer==0.12.4",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.scripts]
dm8gen = "dm8gen.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dm8gen"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cases>=3.8.6",
]
