[project]
name = "datam8-generator"
version = "0.1.2"
description = "ORAYLIS DataM8 Generator"
license = "GPL-3.0"
requires-python = ">=3.11"
readme = "README.md"
authors = [
    { name = "ORAYLIS Gmbh", email = "DataM8@Oraylis.de" }
]
dependencies = [
    "autopep8==2.3.1",
    "Jinja2==3.1.5",
    "jsonschema==4.23.0",
    "pydantic==2.8.2",
    "sqlparse==0.5.1",
    "typer==0.12.4",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.scripts]
dm8gen = "dm8gen.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cases>=3.8.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

#############
# tool.ruff #
#############

[tool.ruff]
exclude = [
  # "src/dm8gen/Generated",
]
line-length = 80

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

##############
# tool.hatch #
##############

[tool.hatch.build.targets.wheel]
packages = ["src/dm8gen"]

[tool.hatch.build.hooks.custom]
path = "hatch_build_datamodel.py"
dependencies = [
  "datamodel-code-generator>=0.28.1",
]

###############
# tool.pytest #
###############

[tool.pytest.ini_options]
pythonpath = ["src"]
